@@ -1,26 +1,26 @@
 To do in this branch before merging back to trunk
 =================================================
 
-- Send email when response is added.
-
-- Update SearchableText of issue when response in
-  added/changed/removed.
-
-- Remove button for adding old style response to issue.
-
-- Add i18n (to avoid problems in merging it is probably best not to
-  actually run ./i18n/rebuildAll.sh).
-
-- Make sure the tests keep running when content/PoiResponse.py is
-  removed.  This file should not *really* be removed though as we need
-  it still during migration.
-
-- Remove skins/Poi/determineResponseType.py
+- Only show options like changing state when the user has permission
+  to use them.
 
 - Add handling for the target releases field (available only when
   using the PSC tracker).
 
 - Show attachment upload widget.
 
-- Only show options like changing state when the user has permission
-  to use them.
+- Send email when response is added.
+
+- Update SearchableText of issue when response in
+  added/changed/removed.
+
+- Add i18n (to avoid problems in merging it is probably best not to
+  actually run ./i18n/rebuildAll.sh).
+
+- Remove button for adding old style response to issue.
+
+- Remove skins/Poi/determineResponseType.py
+
+- Make sure the tests keep running when content/PoiResponse.py is
+  removed.  This file should not *really* be removed though as we need
+  it still during migration.
